--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@ Everything was handled with care and attention to detail, and we never felt like
       -webkit-text-fill-color: transparent;"> Next Trip</span></h2>
     <p>Tell us where you want to go and what kind of experience you’re looking for.</p>
   
-    <form action="https://formsubmit.co/areeb.linkedin@gmail.com" method="POST" class="contact-form">
+    <form action="https://formsubmit.co/laveeza@jaffersontravel.com" method="POST" class="contact-form">
   
       <div class="form-step">
         <label>Step 1:</label>
