--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jafferson Travel</title>
-  <link rel="icon" type="image/x-icon" href="websitefavicon.png">
+  <link rel="icon" href="/websiteicon.png">
   <style>
     body {
       margin: 0;
