--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@ Everything was handled with care and attention to detail, and we never felt like
       <div class="faq-column">
         <div class="faq-item">
           <h4 class="faq-heading">Can I customize my itinerary?</h4>
-          <button class="faq-question" style="margin-top: -16%;">Can I customize my itinerary?</button>
+          <button class="faq-question">Can I customize my itinerary?</button>
           <div class="faq-answer">
             <p>Yes. Every trip is fully customized around your interests, travel style, and preferred pace.</p>
           </div>
