--- a/index.html
+++ b/index.html
@@ -799,6 +799,7 @@ Everything was handled with care and attention to detail, and we never felt like
           <div class="faq-answer">
             <p>We provide full-service travel planning including flights, accommodations, transportation, tours and curated experiences tailored to your travel goals.</p>
           </div>
+        </div>
         <div class="faq-item">
           <h4 class="faq-heading">How far in advance should I book my trip?</h4>
           <button class="faq-question">How far in advance should I book my trip?</button>
@@ -839,6 +840,7 @@ Everything was handled with care and attention to detail, and we never felt like
           <div class="faq-answer">
             <p>Yes. You’ll receive your complete itinerary with confirmations and details before your trip begins.</p>
           </div>
+        </div>
     </div>
   </section>
   
