--- a/index.html
+++ b/index.html
@@ -801,10 +801,11 @@ Everything was handled with care and attention to detail, and we never felt like
           </div>
         </div>
         <div class="faq-item">
-          <h4 class="faq-heading">How far in advance should I book my trip?</h4>
+          <h4 class="faq-heading">How far in advance should I book my trip??</h4>
           <button class="faq-question">How far in advance should I book my trip?</button>
           <div class="faq-answer">
             <p>We recommend booking as early as possible for the best prices and options, however we also accommodate last-minute travel when availability allows.</p>
+          </div>
         </div>
         <div class="faq-item">
           <h4 class="faq-heading">Can you work within my budget?</h4>
@@ -812,7 +813,6 @@ Everything was handled with care and attention to detail, and we never felt like
           <div class="faq-answer">
             <p>Absolutely. We design itineraries based on your budget while maximizing comfort, value, and overall travel experience.</p>
         </div>
-      <div class="faq-column">
         <div class="faq-item">
           <h4 class="faq-heading">Can I customize my itinerary?</h4>
           <button class="faq-question">Can I customize my itinerary?</button>
