--- a/index.html
+++ b/index.html
@@ -812,6 +812,7 @@ Everything was handled with care and attention to detail, and we never felt like
           <button class="faq-question">Can you work within my budget?</button>
           <div class="faq-answer">
             <p>Absolutely. We design itineraries based on your budget while maximizing comfort, value, and overall travel experience.</p>
+          </div>
         </div>
         <div class="faq-item">
           <h4 class="faq-heading">Can I customize my itinerary?</h4>
